# local_voice_agent

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: Prompt_caching:_10x_cheaper_LLM_tokens,but_how.md  What_human_learn.md  c_h_mean.md  cookie.md  docker.md  header.md  langchain_makr_voice_agent.md  pydevtools.md
script/: vision_agent.py
src/local_voice_agent/: audio_utils.py  settings.py  speech_recognition.py  text_to_speech.py  voice_agent.py  voice_agent_api.py
tests/: test_audio_utils.py  test_audio_utils_extended.py  test_settings.py  test_speech_recognizer.py  test_speech_recongnition.py  test_text_to_speech.py  test_voice_agent.py
