[project]
name = "local-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioconsole>=0.8.2",
    "cn2an>=0.5.23",
    "dotenv>=0.9.9",
    "faster-whisper>=1.2.1",
    "jieba>=0.42.1",
    "kokoro>=0.9.4",
    "langchain>=1.2.0",
    "langchain-deepseek>=1.0.1",
    "langgraph>=1.0.5",
    "numpy>=2.3.5",
    "ordered-set>=4.1.0",
    "pip>=25.3",
    "pydantic-settings>=2.12.0",
    "pypinyin>=0.55.0",
    "pypinyin-dict>=0.9.0",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "websockets>=15.0.1",
    "zhconv>=1.4.3",
]


[project.scripts]
voice_agent = "local_voice_agent.voice_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
minversion = "6.0"
addopts = "-ra -q"  # -ra: 显示非 pass 结果的详细摘要, -q: 简化输出
testpaths = [
    "tests",
]
python_files = "test_*.py"

# 1. 告诉 coverage 怎么跑
[tool.coverage.run]
source = ["local_voice_agent"]           # 只统计 lp 包的覆盖率
branch = true             # 开启分支覆盖（不仅测行，还测 if/else 的每个分支）

# 2. 告诉 coverage 怎么报告
[tool.coverage.report]
show_missing = true       # 在终端里直接列出没跑到的行号 (Line 15, 20-22)
skip_empty = true         # 跳过空文件
exclude_lines = [         # 这些行不需要覆盖，忽略它们
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
]
